fix(TranslationDisplay): adjust padding in translation display for better layout and spacing fix(_translation-window): add margin to translation window for improved alignment

--- a/src/assets/styles/components/_translation-window.scss
+++ b/src/assets/styles/components/_translation-window.scss
@@ -149,4 +149,6 @@
   min-height: 100px !important;
   display: flex !important;
   flex-direction: column !important;
+  margin-right: 5px !important;
+  margin-left: 5px !important;
 }
